--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.46.1",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "react": "^18.2.0",
